--- a/index.html
+++ b/index.html
@@ -15,21 +15,86 @@
     <link rel="manifest" href="/img/favicon/site.webmanifest">
     <link rel='stylesheet' type='text/css' media='screen' href='css/styles.css'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
     <script src='js/scripts.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-        crossorigin="anonymous"></script>
+    integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+    crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-        crossorigin="anonymous"></script>
+    integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/84ee914179.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
-    <h1 class="bg-brand-color-1">Ad&oacute;ptame</h1>
+    <footer>
+        <div class="footer-main">
+            <div class="footer-left footer-box">
+                <h2>Ad&oacute;ptame</h2>
+                <div class="content">
+                    <div class="pages">
+                        <div><a href="nosotros.html">Acerca de nosotros</a></div>
+                        <div><a href="contacto.html">Contactarnos</a></div>
+                        <div><a href="faq.html">FAQ</a></div>
+                    </div>
+                    <div class="social">
+                        <a target="_blank" href="https://wa.me/5491111111111">
+                            <span class="fab fa-whatsapp"></span></a>
+                        <a target="_blank" href="https://t.me/5491111111111">
+                            <span class="fab fa-telegram"></span></a>
+                        <a target="_blank" href="https://www.facebook.com/adoptame.ba">
+                            <span class="fab fa-facebook-f"></span></a>
+                        <a target="_blank" href="https://www.twitter.com/adoptame.ba">
+                            <span class="fab fa-twitter"></span></a>
+                        <a target="_blank" href="https://www.instagram.com/adoptame.ba">
+                            <span class="fab fa-instagram"></span></a>
+                        <a target="_blank" href="https://www.tiktok.com/@adoptame.ba">
+                            <span class="fab fa-tiktok"></span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-center footer-box">
+                <h2>Contacto</h2>
+                <div class="content">
+                    <div class="place">
+                        <a target="_blank" href="https://goo.gl/maps/cU4kJyPthTkHunRj7?coh=178572&entry=tt">
+                            <span class="fas fa-map-marker-alt"></span></a>
+                        <span class="text"><a target="_blank" href="https://goo.gl/maps/cU4kJyPthTkHunRj7?coh=178572&entry=tt">Felipe Vallese 571, CABA, Argentina</a></span>
+                    </div>
+                    <div class="phone">
+                        <a target="_blank" href="tel:+5491111111111">
+                            <span class="fas fa-phone-alt"></span></a>
+                        <span class="text"><a target="_blank" href="tel:+5491111111111">+54 9 11-1111-1111</a></span>
+                    </div>
+                    <div class="email">
+                        <a target="_blank" href="mailto:adoptame.info@gmail.com">
+                            <span class="fas fa-envelope"></span></a>
+                        <span class="text"><a target="_blank" href="mailto:adoptame.info@gmail.com">adoptame.info@gmail.com</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-right footer-box">
+                <h2>Newsletter</h2>
+                <div class="content">
+                    <p>Suscribite a nuestro newsletter</p>
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="text" class="text">Email</label>
+                                <input type="email" class="form-control" id="txtEmail" placeholder="Email">
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Suscribirme</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <span>&copy; Ad&oacute;ptame 2023 v 1.0.0, todos los derechos reservados</span>
+        </div>
+    </footer>
 </body>
-
 </html>
