--- a/index.html
+++ b/index.html
@@ -1,32 +1,63 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name="description" content="Sitio web de adopci&oacute;n de mascotas">
     <title>Ad&oacute;ptame</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="icon" type="image/jpg" href="img/favicon/favicon.ico"/>
+    <link rel="icon" type="image/jpg" href="img/favicon/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
     <link rel='stylesheet' type='text/css' media='screen' href='css/styles.css'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+        integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src='js/scripts.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-    integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-    crossorigin="anonymous"></script>
+        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-    integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-    crossorigin="anonymous"></script>
+        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+        crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/84ee914179.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+    <div class="grid-container">
+        <div class="imagen1"></div>
+        <div class="imagen2"></div>
+        <div class="imagen3"></div>
+        <div><br><a href="" class="nav1">Perros</a><br><br>Somos una protectora de animales dedicada al cuidado y
+            rescate de animales, en esta sección podrás acceder a todo tipo de animales, en este caso perros de raza
+            tanto criollos.
+            <br><br> Los perros suelen ser excelentes compañeros para aquellos que necesitan de una compañía constante,
+            siempre te esperarán alegres cuando llegues a tu casa, y nunca te faltará un amigo confiable. ¡No se olviden
+            del refrán, el perro es el mejor amigo del hombre!.
+            <br><br>
+        </div>
+        <div><br><a href="" class="nav1"> Gatos</a><br><br>Por otra parte, si eres una persona más ocupada e
+            independiente, puede ser que el animal que se adapte más a tus necesidades sean los gatos.
+            <br><br>Como algunos dicen, los perros tienen dueños y los gatos sirvientes. Nuestros amigos felinos suelen
+            ser animales más independientes y cazan por sí mismos, acostumbrados a un hábitat más predecible, son
+            curiosos y muchas veces, traviesos. <br><br>¡Estamos seguros que no te defraudará tu elección!.
+
+        </div>
+        <div><br><a href="" class="nav1">Rescatados</a><br><br>Todos sabemos cuán débiles son nuestros corazones ante
+            los animales necesitados. Acá les mostraremos nuestra labor y pasión por el rescate responsable de animales.
+            <br><br>Estamos orgullosos por brindarle una segunda oportunidad, y que puedan acceder a la posibilidad de
+            una mejor calidad de vida, algunos desafortunadamente fueron abandonados, o nacieron de manera irresponsable
+            en la intemperie de la calle. <br><br>Solo entre y eche un vistazo.
+
+        </div>
+    </div>
     <div id="footer"></div>
 </body>
+
 </html>
