unify styles and scripts, reorganize img folders, add header and footer to all pages, improvements and fixes

--- a/footer.html
+++ b/footer.html
@@ -12,8 +12,9 @@
                 <h2>Ad&oacute;ptame</h2>
                 <div class="content">
                     <div class="pages">
+                        <div><a href="index.html">Inicio</a></div>
                         <div><a href="nosotros.html">Acerca de nosotros</a></div>
-                        <div><a href="contacto.html">Contactarnos</a></div>
+                        <div><a href="contacto.html">Contactanos</a></div>
                         <div><a href="faq.html">FAQ</a></div>
                     </div>
                     <div class="social">
@@ -68,11 +69,11 @@
                     <form>
                         <div class="form-row">
                             <div class="form-group">
-                                <label for="text" class="text">Email</label>
-                                <input type="email" class="form-control" id="txtEmail" placeholder="Email">
+                                <label for="txtEmailSuscripcion" class="lblSuscripcion">Email:</label>
+                                <input type="txtEmailSuscripcion" name="txtEmailSuscripcion" class="txtEmailSuscripcion" id="txtEmailSuscripcion" placeholder="Email">
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-primary">Suscribirme</button>
+                        <input type="submit" id="btnSuscripcion" class="btnSuscripcion" value="Suscribirme">
                     </form>
                 </div>
             </div>
