arreglos a útimo momento de tarjetas

--- a/tarjetasgatos.html
+++ b/tarjetasgatos.html
@@ -240,7 +240,7 @@
                     <p>Es una inevitable bola de pelos ronroneante, que se acerca y te sigue a todos lados, ten por seguro que nunca te faltará compañia y atención con ella.</p><br><b>
                         <p>Caracteristicas detacables</p>
                     </b>
-                    <p>Juguetona<br>Activa<br>Sociable</p>
+                    <p>Juguetona<br>Activa<br>Tímida</p>
                     <b>
                         <p>Situación del adoptante</p>
                     </b>
@@ -276,7 +276,7 @@
                         
                         <p>Caracteristicas detacables</p>
                     </b>
-                    <p>Juguetona<br>Activa<br>Sociable</p>
+                    <p>Activo<br>Inteligente<br>Sociable</p>
                     <b>
                         <p>Situación del adoptante</p>
                     </b>
