--- a/footer.html
+++ b/footer.html
@@ -9,13 +9,14 @@
     <footer>
         <div class="footer-main">
             <div class="footer-left footer-box">
-                <h2>Ad&oacute;ptame</h2>
+                <h2><a href="index.html">Ad&oacute;ptame</a></h2>
                 <div class="content">
                     <div class="pages">
-                        <div><a href="index.html">Inicio</a></div>
-                        <div><a href="nosotros.html">Acerca de nosotros</a></div>
-                        <div><a href="contacto.html">Contactanos</a></div>
+                        <div><a href="perros.html">Perros</a></div>
+                        <div><a href="gatos.html">Gatos</a></div>
+                        <div><a href="nosotros.html">Nosotros</a></div>
                         <div><a href="faq.html">FAQ</a></div>
+                        <div><a href="contacto.html">Contacto</a></div>
                     </div>
                     <div class="social">
                         <a target="_blank" href="https://wa.me/5491111111111">
