--- a/nosotros.html
+++ b/nosotros.html
@@ -67,6 +67,11 @@
                 </div>
                 <br><br>
             </div>
+
+            <div class="refugios-img">
+                <img class="nosotros-img" src="img/nosotros/perro-ojitos-1.jpeg" alt="Perrito ojitos" width="25%" height="25%"/>
+                <img class="nosotros-img" src="img/nosotros/perro-ojitos-2.jpeg" alt="Perrito ojitos" width="25%" height="25%"/>
+            </div>
             
             <h3 class="subtitle">
                 Nuestro refugio
