add alt imgs, isotipo to header and imagotipo to nosotros - change some colors

--- a/nosotros.html
+++ b/nosotros.html
@@ -33,6 +33,7 @@
             
             <div class="refugios-img">
                 <img class="nosotros-img" src="img/nosotros/refugio_1.jpg" alt="Refugio de perros" width="25%" height="25%"/>
+                <img class="nosotros-img" src="img/imagotipo.png" alt="imagotipo adoptame" width="25%" height="25%"/>
                 <img class="nosotros-img" src="img/nosotros/refugio_2.jpg" alt="Refugio de gatos" width="25%" height="25%"/>
             </div>
             
