--- a/faq.html
+++ b/faq.html
@@ -74,8 +74,8 @@
                         Desparasitaci&oacute;n, vacunaci&oacute;n, alimentaci&oacute;n y amor.
                         Con todo esto te vas a ir familiarizando a lo largo de la vida de tu amigo peludo.
                         Es muy importante que te acerques a un veterinario que pueda recomendarte y ense&ntilde;arte
-                        sobre las vacunas que necesita, cu&aacute;ndo aplicarlas, c&oacute;mo realizar una correcta 
-                        desparasitaci&oacute;n, seg&uacute;n peso, h&aacute;bitos y edad, y qu&eacute; alimento 
+                        sobre las vacunas que necesita, cu&aacute;ndo aplicarlas, c&oacute;mo realizar una correcta
+                        desparasitaci&oacute;n, seg&uacute;n peso, h&aacute;bitos y edad, y qu&eacute; alimento
                         cubre las necesidades de tu mascota.
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                     <div class="text answer">
                         ¡Qu&eacute; gran coraz&oacute;n ten&eacute;s! Por supuesto que pod&eacute;s adoptar varias mascotas,
                         pero siempre y cuando tengas un buen antecedente con tu adopci&oacute;n anterior, y que cumplas con los requisitos para adoptar otras mascota.
-                        Le&eacute; acerca de otras experiencias de adopci&oacute;n en <a href="adoptados.html">experiencias de animales adoptados</a>.
+                        Le&eacute; acerca de otras experiencias de adopci&oacute;n en <a href="index.html#adoptados">experiencias de animales adoptados</a>.
                     </div>
                 </div>
                 <div class="qa">
