--- a/footer.html
+++ b/footer.html
@@ -74,7 +74,7 @@
                                 <input type="txtEmailSuscripcion" name="txtEmailSuscripcion" class="txtEmailSuscripcion" id="txtEmailSuscripcion" placeholder="Email">
                             </div>
                         </div>
-                        <input type="submit" id="btnSuscripcion" class="btnSuscripcion" value="Suscribirme">
+                        <input type="submit" id="btnSuscripcion" class="btnSuscripcion rebote" value="Suscribirme">
                     </form>
                 </div>
             </div>
