--- a/nosotros.html
+++ b/nosotros.html
@@ -60,7 +60,7 @@
                 este servicio de puro coraz&oacute;n. Solo si es tu deseo colaborar con nosotrxs para ayudarnos a cubrir nuestros gastos,
                 te pedimos que nos compres un cafecito. Nuestrxs animalitos te lo agradecer&aacute;n mucho.
                 <br><br>
-                <div class="content-center">
+                <div class="content-center inclinacion">
                     <a href='https://cafecito.app/adoptame.ba' rel='noopener' target='_blank'>
                         <img srcset='https://cdn.cafecito.app/imgs/buttons/button_6.png 1x, https://cdn.cafecito.app/imgs/buttons/button_6_2x.png 2x, https://cdn.cafecito.app/imgs/buttons/button_6_3.75x.png 3.75x' src='https://cdn.cafecito.app/imgs/buttons/button_6.png' 
                         alt='Invitame un café en cafecito.app' />
