complete pettype radio into contact form when btnAdoptar petcard is clicked

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </b>
                         <p>Juguetona<br>Cari&ntilde;osa<br>Sociable</p>
                         <div class="centrar inclinacion">
-                            <a href="contacto.html?petname=GRISA" class="btnAdoptar">¡Quiero adoptarlo!</a>
+                            <a href="contacto.html?petname=GRISA&pettype=0" class="btnAdoptar">¡Quiero adoptarlo!</a>
                         </div>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
                         </b>
                         <p>Muy activo<br>Obediente<br>Inteligente</p>
                         <div class="centrar inclinacion">
-                            <a href="contacto.html?petname=ARTURO" class="btnAdoptar">¡Quiero adoptarlo!</a>
+                            <a href="contacto.html?petname=ARTURO&pettype=0" class="btnAdoptar">¡Quiero adoptarlo!</a>
                         </div>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                         </b>
                         <p>Activo<br>Inteligente<br>Juguet&oacute;n</p>
                         <div class="centrar inclinacion">
-                            <a href="contacto.html?petname=FELIPO" class="btnAdoptar">¡Quiero adoptarlo!</a>
+                            <a href="contacto.html?petname=FELIPO&pettype=0" class="btnAdoptar">¡Quiero adoptarlo!</a>
                         </div>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                         </b>
                         <p>Cari&ntilde;oso<br>Divertido<br>Sociable</p>
                         <div class="centrar inclinacion">
-                            <a href="contacto.html?petname=LUCKY" class="btnAdoptar">¡Quiero adoptarlo!</a>
+                            <a href="contacto.html?petname=LUCKY&pettype=0" class="btnAdoptar">¡Quiero adoptarlo!</a>
                         </div>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                         </b>
                         <p>Activo<br>Inteligente<br>Obediente</p>
                         <div class="centrar inclinacion">
-                            <a href="contacto.html?petname=GARFIELD" class="btnAdoptar">¡Quiero adoptarlo!</a>
+                            <a href="contacto.html?petname=GARFIELD&pettype=0" class="btnAdoptar">¡Quiero adoptarlo!</a>
                         </div>
                     </div>
                 </div>
@@ -113,7 +113,7 @@
                         </b>
                         <p>Nerviosa<br>Curiosa<br>T&iacute;mida</p>
                         <div class="centrar inclinacion">
-                            <a href="contacto.html?petname=BELLA" class="btnAdoptar">¡Quiero adoptarlo!</a>
+                            <a href="contacto.html?petname=BELLA&pettype=0" class="btnAdoptar">¡Quiero adoptarlo!</a>
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                         </b>
                         <p>Juguetona<br>Activa<br>T&iacute;mida</p>
                         <div class="centrar inclinacion">
-                            <a href="contacto.html?petname=HAYAKO" class="btnAdoptar">¡Quiero adoptarlo!</a>
+                            <a href="contacto.html?petname=HAYAKO&pettype=0" class="btnAdoptar">¡Quiero adoptarlo!</a>
                         </div>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
                         </b>
                         <p>Activo<br>Inteligente<br>Sociable</p>
                         <div class="centrar inclinacion">
-                            <a href="contacto.html?petname=REMO" class="btnAdoptar">¡Quiero adoptarlo!</a>
+                            <a href="contacto.html?petname=REMO&pettype=0" class="btnAdoptar">¡Quiero adoptarlo!</a>
                         </div>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                         </b>
                         <p>Juguetona<br>Mansa<br>Tama&ntilde;o peque&ntilde;o</p>
                         <div class="centrar inclinacion">
-                            <a href="contacto.html?petname=BLANCA" class="btnAdoptar">¡Quiero adoptarlo!</a>
+                            <a href="contacto.html?petname=BLANCA&pettype=1" class="btnAdoptar">¡Quiero adoptarlo!</a>
                         </div>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                         </b>
                         <p>Tranquilo<br>Sociable<br>Inteligente</p>
                         <div class="centrar inclinacion">
-                            <a href="contacto.html?petname=EDEN" class="btnAdoptar">¡Quiero adoptarlo!</a>
+                            <a href="contacto.html?petname=EDEN&pettype=1" class="btnAdoptar">¡Quiero adoptarlo!</a>
                         </div>
                     </div>
                 </div>
@@ -198,7 +198,7 @@
                         </b>
                         <p>Tranquilo<br>Inteligente<br>Din&aacute;mico</p>
                         <div class="centrar inclinacion">
-                            <a href="contacto.html?petname=FACUNDO" class="btnAdoptar">¡Quiero adoptarlo!</a>
+                            <a href="contacto.html?petname=FACUNDO&pettype=1" class="btnAdoptar">¡Quiero adoptarlo!</a>
                         </div>
                     </div>
                 </div>
@@ -213,7 +213,7 @@
                         </b>
                         <p>Cachorro<br>Divertida<br>Sociable</p>
                         <div class="centrar inclinacion">
-                            <a href="contacto.html?petname=LUCERO" class="btnAdoptar">¡Quiero adoptarlo!</a>
+                            <a href="contacto.html?petname=LUCERO&pettype=1" class="btnAdoptar">¡Quiero adoptarlo!</a>
                         </div>
                     </div>
                 </div>
@@ -228,7 +228,7 @@
                         </b>
                         <p>Activo<br>Inteligente<br>Obediente</p>
                         <div class="centrar inclinacion">
-                            <a href="contacto.html?petname=MALEVO" class="btnAdoptar">¡Quiero adoptarlo!</a>
+                            <a href="contacto.html?petname=MALEVO&pettype=1" class="btnAdoptar">¡Quiero adoptarlo!</a>
                         </div>
                     </div>
                 </div>
@@ -243,7 +243,7 @@
                             </b>
                             <p>Activo<br>Inteligente<br>Sociable</p>
                             <div class="centrar inclinacion">
-                                <a href="contacto.html?petname=ROLO" class="btnAdoptar">¡Quiero adoptarlo!</a>
+                                <a href="contacto.html?petname=ROLO&pettype=1" class="btnAdoptar">¡Quiero adoptarlo!</a>
                             </div>
                         </div>
                     </div>
@@ -258,7 +258,7 @@
                             </b>
                             <p>Juguetona<br>Activa<br>Sociable</p>
                             <div class="centrar inclinacion">
-                                <a href="contacto.html?petname=SILVA" class="btnAdoptar">¡Quiero adoptarlo!</a>
+                                <a href="contacto.html?petname=SILVA&pettype=1" class="btnAdoptar">¡Quiero adoptarlo!</a>
                             </div>
                         </div>
                     </div>
@@ -273,7 +273,7 @@
                             </b>
                             <p>Juguetona<br>Activa<br>Sociable</p>
                             <div class="centrar inclinacion">
-                                <a href="contacto.html?petname=TERRA" class="btnAdoptar">¡Quiero adoptarlo!</a>
+                                <a href="contacto.html?petname=TERRA&pettype=1" class="btnAdoptar">¡Quiero adoptarlo!</a>
                             </div>
                         </div>
                     </div>
