add float wsp btn

--- a/nosotros.html
+++ b/nosotros.html
@@ -117,6 +117,10 @@
         </section>
         
     </section>
+
+    <a href="https://api.whatsapp.com/send?phone=5491111111111" class="whatsapp-float" target="_blank">
+        <i class="fa fa-whatsapp"></i>
+    </a>
     
     <div id="footer"></div>
 
