--- a/contacto.html
+++ b/contacto.html
@@ -245,11 +245,16 @@
     
 </section>
 
+</body>
+
+<a href="https://api.whatsapp.com/send?phone=5491111111111" class="whatsapp-float" target="_blank">
+    <i class="fa fa-whatsapp"></i>
+</a>
+
 <div id="footer"></div>
 
 <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/84ee914179.js" crossorigin="anonymous"></script>
 <script src="js/scripts.js"></script>
 
-</body>
 </html>
