add api rest consume to load dogs grid into home and nosotros page

--- a/index.html
+++ b/index.html
@@ -296,7 +296,11 @@
                     Solo entr&aacute; y ech&aacute; un vistazo a quienes ya fueron adoptados.
                 </div>
             </div>
-            
+
+            <h4 class="section-title">Por amor a los animales</h4>
+
+            <div id="api-animal-container"></div>
+
         </section>
         
     </section>
