--- a/nosotros.html
+++ b/nosotros.html
@@ -121,6 +121,10 @@
     <a href="https://api.whatsapp.com/send?phone=5491111111111" class="whatsapp-float" target="_blank">
         <i class="fa fa-whatsapp"></i>
     </a>
+
+    <h4 class="section-title">Por amor a los animales</h4>
+
+    <div id="api-animal-container"></div>
     
     <div id="footer"></div>
 
