add adoptados page

--- a/faq.html
+++ b/faq.html
@@ -109,7 +109,7 @@
                     <div class="text answer">
                         ¡Qu&eacute; gran coraz&oacute;n ten&eacute;s! Por supuesto que pod&eacute;s adoptar varias mascotas,
                         pero siempre y cuando tengas un buen antecedente con tu adopci&oacute;n anterior, y que cumplas con los requisitos para adoptar otras mascota.
-                        Le&eacute; acerca de otras experiencias de adopci&oacute;n en <a href="index.html#adoptados">experiencias de animales adoptados</a>.
+                        Le&eacute; acerca de otras experiencias de adopci&oacute;n en <a href="adoptados.html">experiencias de animales adoptados</a>.
                     </div>
                 </div>
                 <div class="qa">
@@ -156,7 +156,7 @@
     <a href="https://api.whatsapp.com/send?phone=5491111111111" class="whatsapp-float" target="_blank">
         <i class="fa fa-whatsapp"></i>
     </a>
-    
+
     <div id="footer"></div>
     
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
