--- a/footer.html
+++ b/footer.html
@@ -13,6 +13,7 @@
                 <div class="content">
                     <div class="pages">
                         <div><a href="nosotros.html">Nosotros</a></div>
+                        <div><a href="adoptados.html">Adoptados</a></div>
                         <div><a href="faq.html">FAQ</a></div>
                         <div><a href="contacto.html">Contacto</a></div>
                     </div>
