add imgs to adoptados page and delete unused imgs

--- a/adoptados.html
+++ b/adoptados.html
@@ -76,6 +76,11 @@
                 </p>
                 ¡Todo el esfuerzo vali&oacute; la pena!
             </div>
+
+            <div class="refugios-img">
+                <img class="nosotros-img" src="img/adoptados/Adoptame1.jpg" alt="Perrito adoptame 1" width="45%" height="300px"/>
+                <img class="nosotros-img" src="img/adoptados/Adoptame2.jpg" alt="Perrito adoptame 2" width="45%" height="300px"/>
+            </div>
         </section>
         
     </section>
