--- a/index.html
+++ b/index.html
@@ -295,6 +295,11 @@
                 </div>
             </div>
 
+            <div class="refugios-img">
+                <img class="nosotros-img" src="https://cataas.com/cat/gif/says/Adopta%20un%20gatito" alt="adoptame gif" width="45%" height="300px"/>
+                <img class="nosotros-img" src="https://cataas.com/cat/gif/says/¿No%20necesitás%20un%20michi%3F" alt="adoptame gif" width="45%" height="300px"/>
+            </div>
+
             <div class="youtube-iframe">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/M54E5AYn1jg" title="YouTube video player" frameborder="5" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
                 </iframe>
