--- a/footer.html
+++ b/footer.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
+
 <body>
     <footer>
         <div class="footer-main">
@@ -46,7 +48,9 @@
                         <a target="_blank" href="https://goo.gl/maps/cU4kJyPthTkHunRj7?coh=178572&entry=tt">
                             <span class="fas fa-map-marker-alt"></span>
                         </a>
-                        <span class="text"><a target="_blank" href="https://goo.gl/maps/cU4kJyPthTkHunRj7?coh=178572&entry=tt">Felipe Vallese 571, CABA, Argentina</a></span>
+                        <span class="text"><a target="_blank"
+                                href="https://goo.gl/maps/cU4kJyPthTkHunRj7?coh=178572&entry=tt">Felipe Vallese 571,
+                                CABA, Argentina</a></span>
                     </div>
                     <div class="phone">
                         <a target="_blank" href="tel:+5491111111111">
@@ -58,7 +62,8 @@
                         <a target="_blank" href="mailto:adoptame.info@gmail.com">
                             <span class="fas fa-envelope"></span>
                         </a>
-                        <span class="text"><a target="_blank" href="mailto:adoptame.info@gmail.com">adoptame.info@gmail.com</a></span>
+                        <span class="text"><a target="_blank"
+                                href="mailto:adoptame.info@gmail.com">adoptame.info@gmail.com</a></span>
                     </div>
                 </div>
             </div>
@@ -70,7 +75,8 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="txtEmailSuscripcion" class="lblSuscripcion">Email:</label>
-                                <input type="txtEmailSuscripcion" name="txtEmailSuscripcion" class="txtEmailSuscripcion" id="txtEmailSuscripcion" placeholder="Email">
+                                <input type="txtEmailSuscripcion" name="txtEmailSuscripcion" class="txtEmailSuscripcion"
+                                    id="txtEmailSuscripcion" placeholder="Email">
                             </div>
                         </div>
                         <input type="submit" id="btnSuscripcion" class="btnSuscripcion rebote" value="Suscribirme">
@@ -83,4 +89,5 @@
         </div>
     </footer>
 </body>
+
 </html>
