--- a/alta_productos.html
+++ b/alta_productos.html
@@ -2,16 +2,24 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agregar producto</title>
-    <link rel="stylesheet" href="../css/styles_admin.css">
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta name="description" content="Sitio web de adopci&oacute;n de mascotas">
+    <title>Ad&oacute;ptame - Admin</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="icon" type="image/jpg" href="img/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel='stylesheet' type='text/css' media='screen' href='css/styles_admin.css'>
 </head>
 
+
 <body>
-    <h1>Agregar Productos al Inventario</h1>
-    <h3>Codo a Codo 2023</h3>
+    <div id="header_admin"></div>
+
+    <h3>Alta de productos</h3><br>
+
     <form id="formulario">
         <label for="codigo">Código:</label>
         <input type="text" id="codigo" name="codigo" required><br>
@@ -26,7 +34,7 @@
         <input type="number" step="0.01" id="precio" name="precio" required><br>
 
         <button type="submit">Agregar Producto</button>
-        <a href="admin.html">Menu principal</a>
+        <a href="admin.html">Men&uacute; principal</a>
     </form>
     <script>
         const URL = "http://127.0.0.1:5000/"
@@ -78,6 +86,14 @@
                 })
         })
     </script>
+
+    <div id="footer_admin"></div>
+
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+        integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/84ee914179.js" crossorigin="anonymous"></script>
+    <script src="js/scripts_admin.js"></script>
+
 </body>
 
 </html>
