--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
 
     <section class="page-content">
 
-        <h2 class="title">Admistraci&oacute;n</h2>
+        <h2 class="title">Administraci&oacute;n</h2>
 
         <section class="login">
 
