logout btn - center elements and add controls

--- a/login.html
+++ b/login.html
@@ -94,6 +94,9 @@
         integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/84ee914179.js" crossorigin="anonymous"></script>
     <script src="js/scripts_admin.js"></script>
+    <script>
+        document.querySelector('.logout-btn').style.display = 'none';
+    </script>
 
 </body>
 
