--- a/alta_productos.html
+++ b/alta_productos.html
@@ -41,8 +41,10 @@
         <label for="precio">Precio:</label>
         <input type="number" step="0.01" id="precio" name="precio" required><br>
 
-        <button type="submit">Agregar Producto</button>
-        <a href="admin.html">Men&uacute; principal</a>
+        <div class="contenedor-centrado">
+            <button type="submit">Agregar Producto</button>
+            <a href="admin.html">Men&uacute; principal</a>
+        </div>
     </form>
 
     <script>
