--- a/carrito.html
+++ b/carrito.html
@@ -30,33 +30,7 @@
     <div id="app">
         <h3>Carrito de compras</h3><br>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Código</th>
-                    <th>Descripción</th>
-                    <th>Cantidad</th>
-                    <th>Precio</th>
-                    <th>Carrito</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr v-for="producto in productos" :key="producto.codigo">
-                    <td>{{ producto.codigo }}</td>
-                    <td>{{ producto.descripcion }}</td>
-                    <td align="right">{{ producto.cantidad }}</td>
-                    <td align="right">&nbsp; &nbsp; {{ producto.precio }}</td>
-                    <td>
-                        <button @click="agregarAlCarrito(producto)">&nbsp;&nbsp;<b>+</b>&nbsp;&nbsp;</button>
-                        <button @click="restarDelCarrito(producto)">&nbsp;&nbsp;<b>-</b>&nbsp;&nbsp;</button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <br>
-        <div v-if="mostrarCarrito">
-            <h3>Productos en el carrito</h3>
-            <br>
+        <div v-if="productos.length > 0">
             <table>
                 <thead>
                     <tr>
@@ -64,17 +38,53 @@
                         <th>Descripción</th>
                         <th>Cantidad</th>
                         <th>Precio</th>
+                        <th>Carrito</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr v-for="item in carrito" :key="item.codigo">
-                        <td>{{ item.codigo }}</td>
-                        <td>{{ item.descripcion }}</td>
-                        <td align="right">{{ item.cantidad }}</td>
-                        <td align="right">&nbsp; &nbsp; {{ item.precio }}</td>
+                    <tr v-for="producto in productos" :key="producto.codigo">
+                        <td>{{ producto.codigo }}</td>
+                        <td>{{ producto.descripcion }}</td>
+                        <td align="right">{{ producto.cantidad }}</td>
+                        <td align="right">&nbsp; &nbsp; {{ producto.precio }}</td>
+                        <td>
+                            <button @click="agregarAlCarrito(producto)">&nbsp;&nbsp;<b>+</b>&nbsp;&nbsp;</button>
+                            <button @click="restarDelCarrito(producto)">&nbsp;&nbsp;<b>-</b>&nbsp;&nbsp;</button>
+                        </td>
                     </tr>
                 </tbody>
             </table>
+        </div>
+        <div v-else class="contenedor-centrado">
+            <p>No hay productos en el inventario.</p>
+        </div>
+        <br>
+        <div v-if="mostrarCarrito">
+            <h3>Productos en el carrito</h3>
+            <br>
+            <div v-if="carrito.length > 0">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Código</th>
+                            <th>Descripción</th>
+                            <th>Cantidad</th>
+                            <th>Precio</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr v-for="item in carrito" :key="item.codigo">
+                            <td>{{ item.codigo }}</td>
+                            <td>{{ item.descripcion }}</td>
+                            <td align="right">{{ item.cantidad }}</td>
+                            <td align="right">&nbsp; &nbsp; {{ item.precio }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div v-else class="contenedor-centrado">
+                <p>El carrito est&aacute; vac&iacute;o.</p>
+            </div>
         </div>
         <br>
         <div v-if="!mostrarCarrito" class="contenedor-centrado">
@@ -87,6 +97,7 @@
 
     </div>
 
+    <script src="https://unpkg.com/vue@next"></script>
     <script>
         const URL = "http://127.0.0.1:5000/"
         //const URL = "https://fabianescobar.pythonanywhere.com/"
