--- a/modificacion_productos.html
+++ b/modificacion_productos.html
@@ -32,7 +32,10 @@
         <form @submit.prevent="obtenerProducto">
             <label for="codigo">Código:</label>
             <input type="text" v-model="codigo" required><br>
-            <button type="submit">Modificar Producto</button> <a href="admin.html">Men&uacute; principal</a>
+            <div class="contenedor-centrado">
+                <button type="submit">Modificar Producto</button>
+                <a href="admin.html">Men&uacute; principal</a>
+            </div>
         </form>
 
         <div v-if="mostrarDatosProducto"><br>
@@ -46,8 +49,10 @@
                 <label for="precioModificar">Precio:</label>
                 <input type="number" step="0.01" id="precioModificar" v-model="precio" required><br>
 
-                <button type="submit">Guardar Cambios</button>
-                <a href="modificacion_productos.html">Cancelar</a>
+                <div class="contenedor-centrado">
+                    <button type="submit">Guardar Cambios</button>
+                    <a href="modificacion_productos.html">Cancelar</a>
+                </div>
             </form>
         </div>
     </div>
