add open website into admin home

--- a/admin.html
+++ b/admin.html
@@ -45,6 +45,9 @@
             <tr>
                 <td class="contenedor-centrado "><a href="carrito.html">Carrito de compras</a></td>
             </tr>
+            <tr>
+                <td class="contenedor-centrado "><a target="_blank" href="index.html">Ver el sitio web</a></td>
+            </tr>
         </table>
     </div>
 
