repoint to prod endpoints

--- a/alta_productos.html
+++ b/alta_productos.html
@@ -48,8 +48,8 @@
     </form>
 
     <script>
-        const URL = "http://127.0.0.1:5000/"
-        // const URL = "https://fabianescobar.pythonanywhere.com/"
+        // const URL = "http://127.0.0.1:5000/"
+        const URL = "https://fabianescobar.pythonanywhere.com/"
 
         document.getElementById('formulario').addEventListener('submit', function (event) {
             event.preventDefault() // Evitamos que se recargue la página
