--- a/baja_productos.html
+++ b/baja_productos.html
@@ -63,8 +63,8 @@
             },
             methods: {
                 obtenerProductos() {
-                    const URL = "http://127.0.0.1:5000/"
-                    //const URL = "https://fabianescobar.pythonanywhere.com/"
+                    // const URL = "http://127.0.0.1:5000/"
+                    const URL = "https://fabianescobar.pythonanywhere.com/"
 
                     fetch(URL + 'productos')
                         .then(response => {
@@ -83,8 +83,8 @@
                         })
                 },
                 eliminarProducto(codigo) {
-                    const URL = "http://127.0.0.1:5000/"
-                    //const URL = "https://fabianescobar.pythonanywhere.com/"
+                    // const URL = "http://127.0.0.1:5000/"
+                    const URL = "https://fabianescobar.pythonanywhere.com/"
 
                     fetch(URL + `productos/${codigo}`, { method: 'DELETE' })
                         .then(response => {
