--- a/listado_productos.html
+++ b/listado_productos.html
@@ -46,8 +46,8 @@
     </div>
 
     <script>
-        const URL = "http://127.0.0.1:5000/"
-        //const URL = "https://fabianescobar.pythonanywhere.com/"
+        // const URL = "http://127.0.0.1:5000/"
+        const URL = "https://fabianescobar.pythonanywhere.com/"
 
         fetch(URL + 'productos')
             .then(function (response) {
