fix create adoptions form

--- a/admin.html
+++ b/admin.html
@@ -46,6 +46,9 @@
                 <td class="contenedor-centrado "><a href="carrito.html">Carrito de compras</a></td>
             </tr>
             <tr>
+                <td class="contenedor-centrado"><a href="alta_adopcion.html">Alta de adopci&oacute;n</a></td>
+            </tr>
+            <tr>
                 <td class="contenedor-centrado "><a target="_blank" href="index.html">Ver el sitio web</a></td>
             </tr>
         </table>
